--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,13 @@
     "strict": true,
     "skipLibCheck": true,
     "moduleResolution": "Node",
-    "outDir": "./out"
+    "outDir": "./out",
+    "plugins": [
+      {
+        "transform": "@zoltu/typescript-transformer-append-js-extension/output/index.js",
+        "after": true,
+      }
+    ]
   },
   "include": [
     "src/**/*.ts"
